apps/base/komga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  labels:
    app: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      containers:
        - name: komga
          image: gotson/komga:1.24.3 # {"$imagepolicy": "komga:komga"}
          ports:
            - name: http
              containerPort: 25600
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga
        - name: media
          nfs:
            server: 10.0.1.134
            path: /var/nfs/shared/Media_Server
            readOnly: true
