apps/base/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  selector:
    app: komga
  ports:
    - name: http
      protocol: TCP
      port: 25600
      targetPort: http
