apps/base/komga/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: komga
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "komga.southcity.dev"
  rules:
    - backendRefs:
        - name: komga
          port: 25600
